fix: added key to select, added z-index to select ul

--- a/src/components/Select/index.module.scss
+++ b/src/components/Select/index.module.scss
@@ -5,63 +5,66 @@ $borderWidth: 1px;
 $fieldPadding: 16px 14px;
 
 .container {
-    position: relative;
+  position: relative;
+  width: 100%;
+
+  &__title {
+    display: inline-block;
     width: 100%;
+    margin-bottom: 4px;
+  }
 
-    &__title {
-        display: inline-block;
-        width: 100%;
-        margin-bottom: 4px;
+  &__field {
+    width: 100%;
+    position: relative;
+    border-width: 1px;
+    border-style: solid;
+
+    cursor: pointer;
+
+    transition: border-radius $tranzition150;
+
+    & > div {
+      display: flex;
+      justify-content: space-between;
+      padding: $fieldPadding;
+
+      svg {
+        transition: transform $tranzition150;
+      }
     }
 
-    &__field {
-        width: 100%;
-        position: relative;
-        border-width: 1px;
-        border-style: solid;
+    ul {
+      width: calc(100% + #{$borderWidth} * 2);
 
-        cursor: pointer;
+      position: absolute;
 
-        transition: border-radius $tranzition150;
+      left: -#{$borderWidth};
+      top: 46px;
 
-        & > div {
-            display: flex;
-            justify-content: space-between;
-            padding: $fieldPadding;
+      margin: 0;
+      padding: 0;
 
-            svg {
-                transition: transform $tranzition150;
-            }
-        }
+      border-width: 1px 1px 1px;
+      border-style: solid;
+      border-radius: 0 0 $borderRadius $borderRadius;
 
-        ul {
-            position: absolute;
+      list-style-type: none;
 
-            left: -#{$borderWidth};
-            top: 46px;
-            width: calc(100% + #{$borderWidth} * 2);
+      background-color: white;
 
-            margin: 0;
-            padding: 0;
+      z-index: 99;
 
-            border-width: 1px 1px 1px;
-            border-style: solid;
-            border-radius: 0 0 $borderRadius $borderRadius;
+      transition: opacity $tranzition150;
 
-            list-style-type: none;
-
-            background-color: white;
-
-            transition: opacity $tranzition150;
-
-            li {
-                padding: $fieldPadding;
-                transition: background-color $tranzition150;
-            }
-        }
-
-        .selected {
-            margin: 0;
-        }
+      li {
+        padding: $fieldPadding;
+        transition: background-color $tranzition150;
+      }
     }
+
+    .selected {
+      margin: 0;
+    }
+  }
 }
